<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/generalBackground"
    tools:context="fsa.williammordohay.melodienet_android_client.activites.ActiviteAuthent"
    android:weightSum="1">


    <ImageButton
        android:id="@+id/quitButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:onClick="quitter"
        android:background="@color/quitColor"
        android:layout_gravity="right"
        app:srcCompat="@android:drawable/ic_lock_power_off" />

    <EditText
        android:id="@+id/loginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:hint="@string/nom_utilisateur"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:inputType="textPassword"
        android:layout_marginTop="45dp"
        android:ems="10"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/boutton_authent" />

    <TextView
        android:id="@+id/registerLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/texte_accueil" />

    <ImageButton
        android:id="@+id/buttonParameters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:onClick="allerAuxParam"
        app:srcCompat="@android:drawable/ic_menu_preferences" />

    <ImageView
        android:id="@+id/MelodieLogo"
        android:layout_width="135dp"
        android:layout_height="78dp"
        android:layout_gravity="center"
        android:layout_marginBottom="21dp"
        android:layout_marginTop="65dp"
        app:srcCompat="@drawable/logo_melodie"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="392dp" />

</LinearLayout>

